--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,12 +29,9 @@ jobs:
           config_timezone: America/Los_Angeles
           plugin_achievements: yes
           plugin_achievements_display: compact
-          plugin_achievements_ignored: explorer
+          plugin_achievements_ignored: explorer, gister, helper
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
-          plugin_notable: yes
-          plugin_notable_from: organization
-          plugin_notable_types: commit
+          plugin_isocalendar_duration: full-year
           plugin_traffic: yes
